ECS/terraform/ecs.tf
resource "aws_ecs_cluster" "main" {
  name = var.ecs_cluster_name
  tags = var.tags
}

resource "aws_ecs_task_definition" "web_app" {
  family                   = var.ecs_task_family
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_task_execution.arn

  container_definitions = jsonencode([{
    name      = "web-app"
    image     = var.dockerhub_image
    essential = true
    portMappings = [{
      containerPort = 80
      hostPort      = 80
    }]
    #logConfiguration = {
    #  logDriver = "awslogs"
    #  options = {
    #    "awslogs-group"         = "/ecs/web-app"
    #    "awslogs-region"        = var.region
    #    "awslogs-stream-prefix" = "ecs"
    #  }
    #}
  }])

  tags = var.tags
}


resource "aws_ecs_service" "web_app_service" {
  name            = var.ecs_service_name
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.web_app.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets         = [aws_subnet.subnet1.id, aws_subnet.subnet2.id]
    security_groups = [aws_security_group.ecs.id]
    assign_public_ip = true
  }

  tags = var.tags
}
